<resources>
    <string name="app_name">Tiki Tales</string>
    <string name="empty_field_error" />
    <string name="add_cocktail_button_label">Save Recipe</string>
    <string name="cocktail_name_label">Recipe Name</string>
    <string name="cocktail_ingredients_label">Ingredients List</string>
    <string name="cocktail_instructions_label">Instructions</string>
    <string name="search_hint">Search For A Drink...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_cocktails">Cocktails</string>
    <string name="menu_invent_cocktail">Invent Cocktail</string>
    <string name="menu_add_cocktail">Add Cocktail</string>
    <string name="reset_database_button_text">Reset Drinks Database</string>
    <string name="menu_search">Search</string>
</resources>