<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cocktail_name_label"
        android:inputType="text"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <EditText
        android:id="@+id/edit_text_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cocktail_ingredients_label"
        android:inputType="textMultiLine"
        android:layout_below="@id/edit_text_name"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <EditText
        android:id="@+id/edit_text_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cocktail_instructions_label"
        android:inputType="textMultiLine"
        android:lines="5"
        android:minLines="5"
        android:layout_below="@id/edit_text_ingredients"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_cocktail_button_label"
        android:layout_below="@id/edit_text_instructions"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"/>

</RelativeLayout>
